# webylib

./: .gitignore  BIOMETRIC_SECURITY.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MOBILE_PLATFORM_INTEGRATION.md  MODULE.bazel  README.md  WALLET_ENCRYPTION_GUIDE.md  WORKSPACE  cbindgen.toml  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
crates/: README.md
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/hd/: Cargo.toml
crates/hd/src/: legacy_webcash.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/proto-client/: Cargo.toml
crates/proto-client/src/: lib.rs
crates/server-client/: Cargo.toml
crates/server-client/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: json.rs  lib.rs  mem.rs  sqlite.rs
crates/storage/tests/: backend_conformance.rs
crates/wallet-rgb/: Cargo.toml
crates/wallet-rgb/src/: lib.rs
crates/wallet-voucher/: Cargo.toml
crates/wallet-voucher/src/: lib.rs
crates/wallet-webcash/: Cargo.toml
crates/wallet-webcash/src/: lib.rs
crates/webylib-cli/: Cargo.toml
crates/webylib-cli/src/: main.rs
crates/webylib-core/: Cargo.toml
crates/webylib-core/src/: asset.rs  lib.rs  recovery.rs
crates/webylib-core/src/ops/: mod.rs  recover.rs
crates/webylib-ffi/: Cargo.toml
crates/webylib-ffi/src/: lib.rs
crates/webylib-ffi/tests/: ffi_demo.rs
crates/webylib-wasm/: Cargo.toml
crates/webylib-wasm/src/: contract.rs  lib.rs  storage.rs  wallet.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_FIXES.md  CHANGELOG.md  DEVELOPMENT.md  FFI.md  IMPLEMENTATION_STATUS.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md
docs/architecture/: ARCHITECTURE.md
docs/development/: BUILD.md  SETUP.md
docs/security/: SECURITY.md
docs/webcash/: API.md  WEBCASH.md
scripts/: build_release.sh
src/: amount.rs  biometric.rs  crypto.rs  error.rs  hd.rs  lib.rs  miner.rs  passkey.rs  protocol.rs  server.rs  wallet.rs  webcash.rs
src/ffi/: error.rs  mod.rs  types.rs  wallet_ops.rs
src/server/: ios.rs
src/wallet/: encryption.rs  idb.rs  mod.rs  operations.rs  schema.rs  snapshot.rs  store.rs
tests/: README.md  all_flavors_compose.rs  cli_compose.rs  full_e2e.rs  htlc_rgb21_e2e.rs  htlc_swap_e2e.rs  integration_tests.rs  recovery_all_flavors.rs  recovery_compose.rs  server_webcash_integration.rs  unit_tests.rs  wallet_verbs_compose.rs
tests/.test-data/: preservation_master_secret.txt
tests/unit/: amount.rs  crypto.rs  error.rs  hd.rs  lib.rs  mod.rs  server.rs  server_ios.rs  wallet.rs  webcash.rs
