load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "webylib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    edition = "2021",
    deps = [
        "@crate_index//:aes-gcm",
        "@crate_index//:anyhow",
        "@crate_index//:argon2",
        "@crate_index//:async-trait",
        "@crate_index//:base64",
        "@crate_index//:chrono",
        "@crate_index//:getrandom",
        "@crate_index//:hex",
        "@crate_index//:hkdf",
        "@crate_index//:hmac",
        "@crate_index//:log",
        "@crate_index//:rand",
        "@crate_index//:rand_chacha",
        "@crate_index//:reqwest",
        "@crate_index//:rusqlite",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:sha2",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:url",
        "@crate_index//:uuid",
        "@crate_index//:zeroize",
    ],
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "webyc",
    srcs = glob(["src/bin/**/*.rs"]),
    edition = "2021",
    deps = [
        ":webylib",
        "@crate_index//:clap",
        "@crate_index//:rpassword",
        "@crate_index//:serde_json",
        "@crate_index//:tokio",
    ],
)

rust_test(
    name = "unit_tests",
    crate = ":webylib",
)
