[workspace]
resolver = "2"
members = [
    # Existing: legacy webylib root package + WASM crate
    ".",
    "crates/webylib-wasm",

    # New (M0 scaffolding for the asset-gated refactor; populated in M2+)
    "crates/macros",
    "crates/crypto",
    "crates/hd",
    "crates/storage",
    "crates/proto-client",
    "crates/auth",
    "crates/server-client",
    "crates/webylib-core",
    "crates/wallet-webcash",
    "crates/wallet-rgb",
    "crates/wallet-voucher",
    "crates/webylib-ffi",
    "crates/webylib-cli",
    "crates/conformance",
]

[workspace.package]
version = "0.3.14"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Webycash Developers"]
repository = "https://github.com/webycash/webylib"

[workspace.dependencies]
# Internal crate paths (workspace members reference each other through these)
webylib-macros = { path = "crates/macros", version = "0.3" }
webylib-crypto = { path = "crates/crypto", version = "0.3" }
webylib-hd = { path = "crates/hd", version = "0.3" }
webylib-storage = { path = "crates/storage", version = "0.3", default-features = false }
webylib-proto-client = { path = "crates/proto-client", version = "0.3" }
webylib-auth = { path = "crates/auth", version = "0.3" }
webylib-server-client = { path = "crates/server-client", version = "0.3" }
webylib-core = { path = "crates/webylib-core", version = "0.3" }
webylib-wallet-webcash = { path = "crates/wallet-webcash", version = "0.3" }
webylib-wallet-rgb = { path = "crates/wallet-rgb", version = "0.3" }
webylib-wallet-voucher = { path = "crates/wallet-voucher", version = "0.3" }

# Pinned versions for shared deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
proptest = "1"

[package]
name = "webylib"
version = "0.3.14"
edition = "2021"
rust-version = "1.85"
description = "Webcash HD wallet library — bearer e-cash with BIP32-style key derivation, SQLite storage, AES-256-GCM encryption, and full C FFI for cross-platform SDKs"
license = "MIT"
authors = ["Webycash Developers"]
homepage = "https://weby.cash"
repository = "https://github.com/webycash/webylib"
documentation = "https://docs.rs/webylib"
readme = "README.md"
keywords = ["webcash", "wallet", "payments", "bearer-cash", "hd-wallet"]
categories = ["cryptography", "cryptography::cryptocurrencies", "api-bindings"]
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "tests/**/*.txt",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "docs/**/*.md",
    "include/**/*",
    "cbindgen.toml",
]

[lib]
name = "webylib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "webyc"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
# ── Always available (WASM-safe) ────────────────────────────────
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
rand_chacha = "0.9"
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
zeroize = { version = "1.5", features = ["derive"] }

# getrandom: native uses default, WASM uses js feature
getrandom = "0.2"
getrandom_0_3 = { package = "getrandom", version = "0.3" }

# ── Native-only (optional) ──────────────────────────────────────
tokio = { version = "1.0", features = ["full"], optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"], optional = true }

# Asset-generic recovery / wallet ops live in these crates. The legacy
# webylib::Wallet now delegates to them so there's a single recovery
# implementation shared with wallet-{webcash,rgb,voucher}.
webylib-core = { workspace = true }
webylib-hd = { workspace = true }
webylib-server-client = { workspace = true }
webylib-wallet-webcash = { workspace = true }

# WASM (optional)
web-sys = { version = "0.3", features = ["DomStringList", "Event", "EventTarget", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "Window"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
futures-channel = { version = "0.3", optional = true }

# CLI (optional)
clap = { version = "4.0", features = ["derive"], optional = true }
rpassword = { version = "7.3", optional = true }
dirs-next = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.0"
mockito = "1.7.0"
ed25519-dalek = "2"
serde_json = "1"
webylib-core = { workspace = true }
webylib-hd = { workspace = true }
webylib-wallet-webcash = { workspace = true }
webylib-wallet-rgb = { workspace = true }
webylib-wallet-voucher = { workspace = true }
webylib-server-client = { workspace = true }

[features]
default = ["native", "cli"]

# Native: SQLite storage, HTTP client with TLS, async runtime, keyring
native = [
    "dep:tokio",
    "dep:rusqlite",
    "dep:reqwest",
    "reqwest?/rustls-tls",
    "dep:keyring",
    "bundled-sqlite",
]
bundled-sqlite = ["rusqlite?/bundled"]

# WASM: HTTP client via browser fetch, getrandom via JS, IndexedDB persistence
wasm = ["dep:reqwest", "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:futures-channel", "getrandom/js", "getrandom_0_3/wasm_js", "uuid/js"]

ffi = ["native"]
cli = ["native", "dep:clap", "dep:rpassword", "dep:dirs-next"]
passkey = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
