[package]
name = "webylib-auth"
description = "PGP keyring (issuer fingerprints), identity management. Default to rpgp (pure-Rust, WASM-friendly)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.5", features = ["derive"] }
# rpgp pulled in during M4 (RGB issuer signing in the wallet).
