[package]
name = "webylib-conformance"
description = "Wallet-side conformance suite: webylib runs against webcash.org production AND against locally-deployed server-{webcash,rgb,voucher} via docker-compose."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
live-webcash-org = []
docker-local = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
