[package]
name = "webylib-crypto"
description = "SHA256, Argon2, AES-256-GCM, Ed25519 — extracted from webylib's crypto.rs and split for testability and WASM cleanliness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.5", features = ["derive"] }
