[package]
name = "webylib-hd"
description = "HD derivation: legacy Webcash 4-chain SHA256 (frozen) + BIP32/39/44 for RGB and Voucher families"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
webylib-crypto = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.5", features = ["derive"] }
# bitcoin::bip32 added in M4 (RGB/Voucher BIP32 path)
