[package]
name = "webylib-macros"
description = "Procedural macros for webylib: #[wallet_op], #[asset_storage], #[ffi_export]"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
tokio = { version = "1", features = ["rt", "macros"] }
