[package]
name = "webylib-server-client"
description = "AssetServerClient<A: Asset> — generic HTTP client for the asset-gated server. Endpoints absent at compile time when not applicable to A."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["native"]
native = ["dep:reqwest", "dep:tokio"]
wasm = []

[dependencies]
webylib-proto-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
