[package]
name = "webylib-wallet-rgb"
description = "RGB specialization of the generic Wallet. RGB20 splittable + RGB21 non-splittable. Issuer-namespaced. WASM AluVM."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
webylib-core = { workspace = true }
webylib-server-client = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# Real RGB transition validation happens client-side via webylib-wasm/contract.rs
# (browser) or webylib-aluvm (native) — both load aluvm 0.12 + the contract's
# compiled library and run the transition before this wallet calls /replace.
