[package]
name = "webylib-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Webycash Developers"]
repository = "https://github.com/webycash/webylib"
description = "Webycash wallet cryptographic primitives for WebAssembly"
keywords = ["webcash", "wallet", "wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Root crate: storage module with MemStore + JsonStore, no SQLite.
webylib = { workspace = true, default-features = false, features = ["mem", "json"] }
# Client-side AluVM contract execution. RGB validation is client-side
# in RGB's design — the server only tracks ownership; the wallet runs
# the contract's transition rules locally before submitting /replace
# or /transfer.
aluvm = "0.12"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
